--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,58 @@ html {
 
 body {
   margin: 0;
+  padding: 1em;
 }
 
 img {
   display: block;
   width: 100%;
+}
+
+a {
+  color: #3783a3;
+}
+
+.main-title {
+  display: flex;
+  justify-content: center;
+  font-size: 1.5rem;
+  padding: .5em;
+}
+
+h1 {
+  margin-bottom: 0;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+.big-text {
+  font-size: 2rem;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+article a {
+  border: 1px solid #3783a3;
+  text-decoration: none;
+  padding: 1em;
+}
+
+@media only screen and (min-width: 38em) {
+  body {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  main {
+    display: contents;
+  }
+
 }
