--- a/css/main.css
+++ b/css/main.css
@@ -31,30 +31,57 @@ a {
   color: #3783a3;
 }
 
-.main-title {
+h1,.top-h2 {
   display: flex;
   justify-content: center;
   font-size: 1.5rem;
-  padding: .5em;
 }
 
 h1 {
-  margin-bottom: 0;
+  margin: 0;
+  font-size: 2rem;
+}
+
+.top-h2 {
+  margin: 0;
+  font-size: 1.125rem;
 }
 
 h2 {
+  margin-bottom: 0;
+}
+
+h3 {
   margin-top: 0;
+  font-size: 1rem;
 }
 
 .big-text {
   font-size: 2rem;
+  margin: 1rem 0;
+}
+
+.banner-img {
+  margin-bottom: 1rem;
+}
+
+.header-text {
+  padding: 0 1em;
+  text-align: center;
+}
+
+.hr-two {
+  margin: 2rem 0;
+  color: #e2e2e2;
 }
 
 ul {
   list-style-type: none;
   display: flex;
   justify-content: space-around;
-  align-items: center;
+  margin-top: 0;
+  font-size: 1.125rem;
+  padding: 0;
 }
 
 article a {
