Adjust the padding

--- a/css/main.css
+++ b/css/main.css
@@ -58,11 +58,11 @@ h3 {
 
 .big-text {
   font-size: 2rem;
-  margin: 1rem 0;
+  margin: .5rem 0;
 }
 
 .banner-img {
-  margin-bottom: 1rem;
+  margin-bottom: 1.25rem;
 }
 
 .header-text {
@@ -75,19 +75,38 @@ h3 {
   color: #e2e2e2;
 }
 
+.hr-three {
+  margin: 2rem 0 1rem;
+}
+
+.p-margin {
+  margin-bottom: 2rem;
+}
+
+.img-article {
+  margin-top: 2rem;
+}
+
 ul {
   list-style-type: none;
   display: flex;
   justify-content: space-around;
   margin-top: 0;
   font-size: 1.125rem;
-  padding: 0;
+  padding: 0 .5rem;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
 }
 
 article a {
   border: 1px solid #3783a3;
   text-decoration: none;
-  padding: 1em;
+  padding: .75em;
+  display: flex;
+  align-items: stretch;
 }
 
 @media only screen and (min-width: 38em) {
