--- a/css/main.css
+++ b/css/main.css
@@ -121,12 +121,13 @@ article a {
 @media only screen and (min-width: 38em) {
 
   body {
+
+  }
+
+  section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:
-    "banner banner banner"
-    "figone figtwo figthree";
+    display: flex;
   }
 
   header {
@@ -141,12 +142,6 @@ article a {
     grid-column: 1;
     grid-row: 1;
     z-index: 10;
-  }
-
-  .banner-img {
-    grid-column: 1;
-    grid-row: -2;
-    z-index: 9;
   }
 
   .banner {
