--- a/css/main.css
+++ b/css/main.css
@@ -46,11 +46,14 @@ i {
 ul {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   list-style-type: none;
   padding: 0 .5rem;
   margin: 0 0 1rem;
   font-size: 1.125rem;
+}
+
+li {
+  padding: 0 .5rem;
 }
 
 .header-text {
@@ -68,12 +71,15 @@ figure {
   margin: 1.5em 0;
 }
 
+
 @media only screen and (min-width: 38em) {
 
   section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1rem;
+    border-bottom: 2px solid #e2e2e2;
+    padding-bottom: 1.5em;
   }
 
   header {
@@ -82,6 +88,7 @@ figure {
 
   h2, h3 {
     margin: 0;
+    margin-bottom: 1rem;
   }
 
   article a {
@@ -90,6 +97,16 @@ figure {
     padding: .5em;
     display: flex;
     align-items: stretch;
+  }
+
+  ul {
+    position: absolute;
+    right: 5%;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
   }
 
 }
